--- a/AgendaSanPablo/templates/calc_notas.html
+++ b/AgendaSanPablo/templates/calc_notas.html
@@ -7,7 +7,7 @@
 </div>
 <div class="row">
 	 <blockquote>
-      De click en el boton agregar aumentar la cantidad del campos y click en borrar para eliminar el ultimo campo agregado
+      Da click en el botón agregar aumentar la cantidad de campos y click en borrar para eliminar el último campo agregado
     </blockquote>
 </div>
 <div class="row">
@@ -20,11 +20,11 @@
 </div>
 <div id="contenido">
 	<div id='inp_0' class='row'>
-		<div class='input-field col s6'>
+		<div class='input-field col s4 push-s1'>
 			<input id='not_0' type='number'>
 				<label for='not_"+ultimo+"'>Nota</label>
 		</div>
-		<div class='input-field col s6'>
+		<div class='input-field col s4 push-s2'>
 			<input id='pes_0' type='number'>
 			<label for='pes_"+ultimo+"'>Peso</label>
 		</div>
@@ -36,6 +36,6 @@
 	</div>
 </div>
 <div id="resultado">
-	
+
 </div>
 {% endblock content %}
