--- a/AgendaSanPablo/templates/main.html
+++ b/AgendaSanPablo/templates/main.html
@@ -2,20 +2,22 @@
 {% load staticfiles %}
 {% block content %}
 <div class="row">
-	<h2 class="center-align">Bienvenido: {{ request.session.userNombre }} </h2>
+	<h2 class="center-align">Bienvenida/o: {{ request.session.userNombre }} </h2>
 </div>
 <div class="row">
-	<p class="flow-text center-align">En tu Agenda SanPablo podras calcular tus notas ver tu horario y calificar a tus profesores, ademas muy pronto tendras nuevas funcionalidades a tu disposicion</p>
+	<p style="padding-left: 1em;padding-right: 1em;" class="flow-text center-align">
+		En tu Agenda SanPablo podrás calcular tus notas, ver tu horario
+		y calificar a tus profesores, además muy pronto tendrás nuevas funcionalidades a tu disposición</p>
 </div>
 <div class="row">
 	<div class="slider">
 	  <ul class="slides" style="margin-top:10vh;">
 	    <li>
-	      <img class="responsive-img" width="80%" src="http://ucsp.edu.pe/wp-content/uploads/2017/06/Banner-horizontal_civil.jpg"> <!-- random image -->
+	      <img src="http://liderazgo.ucsp.edu.pe/wp-content/uploads/2017/02/Banner-web.jpg"> <!-- random image -->
 	    </li>
-	    <li>
-	      <img src="http://ucsp.edu.pe/wp-content/uploads/2017/06/Banner-horizontal_CC.jpg"> <!-- random image -->
-	    </li>
+			<li>
+				<img class="responsive-img" width="80%" src="http://ucsp.edu.pe/iet/extension/wp-content/uploads/2016/03/Banner-horizontal-18-1024x267.jpg"> <!-- random image -->
+			</li>
 	    <li>
 	      <img src="http://ucsp.edu.pe/wp-content/uploads/2017/06/Banner-horizontal-10.jpg"> <!-- random image -->
 	    </li>
@@ -25,6 +27,11 @@
 	  </ul>
 	</div>
 
+<style>
+.slider .indicators .indicator-item.active {
+    background-color: #42a5f5;
+}
+</style>
 	<script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js'  %}"></script>
 	<script type="text/javascript" src="{% static 'js/materialize.min.js'  %}"></script>
 	<script type="text/javascript" src="{% static 'js/general.js'  %}"></script>
