--- a/AgendaSanPablo/templates/agregar_horario.html
+++ b/AgendaSanPablo/templates/agregar_horario.html
@@ -3,11 +3,41 @@
 {% block content %}
 <script type="text/javascript" src="{% static 'js/getcurso_js.js' %}"></script>
 <div class="row">
-	<h1 class="center-align">Agregar Curso a su Horario</h1>
+	<h1 class="center-align">Agregue Curso a su Horario</h1>
 </div>
 <div style="padding-left: 3em;padding-right: 3em;" class="row">
 	<form method="POST" action="/inicio/insertCurso/" class="col s12 m12 l12">{% csrf_token %}
 		<div class="row" style="margin-top: 5vh;">
+		<div class="input-field col s12 m4 l4 push-m1 push-l1">
+				<select id="ciclo" name="ciclo">
+					<option value="1">1</option>
+		      <option value="2">2</option>
+		      <option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+					<option value="6">6</option>
+					<option value="7">7</option>
+					<option value="8">8</option>
+					<option value="9">9</option>
+			 </select>
+				<label>Seleccione ciclo</label>
+			</div>
+			<div class="input-field col s12 m4 l4 push-m3 push-l3">
+				<select id="carrera" name="carrera">
+					<option value="1">Ciencia de la Computación</option>
+					<option value="2">Administración de Negocios</option>
+					<option value="3">Contabilidad</option>
+					<option value="4">Educación</option>
+					<option value="5">Psicología</option>
+					<option value="6">Ingeniería Civil</option>
+					<option value="7">Ingeniería Electrónica y de Telecomunicaciones</option>
+					<option value="8">Ingeniería Industrial</option>
+					<option value="9">Derecho</option>
+				</select>
+				<label>Carrera</label>
+			</div>
+		</div>
+		<div class="row">
 		<div class="input-field col s12 m4 l4 push-m1 push-l1">
 	    	<select id="inp_curso" name="inp_curso"> </select>
 	    	<label>Seleccione Curso</label>
@@ -29,8 +59,7 @@
 		</div>
 		<div class="row">
 			<div class="col s12 m6 l6 offset-m3 offset-l3" style="margin-top: 15vh;">
-				<button class="btn waves-effect waves-light cyan darken-4 col s12" type="submit" name="action">Submit
-			    	<i class="material-icons right">send</i>
+				<button class="btn waves-effect waves-light cyan darken-4 col s12" type="submit" name="action">Agregar			    	<i class="material-icons right">send</i>
 			  	</button>
 			</div>
 		</div>
