--- a/AgendaSanPablo/templates/base.html
+++ b/AgendaSanPablo/templates/base.html
@@ -31,6 +31,7 @@
       <li><a href="{% url 'horario'%}">Horario</a></li>
       <li><a href="{% url 'calc_notas' %}">Calculadora de Notas</a></li>
       <li><a href="/calProfesores/">Calificar Profesores</a></li>
+			<li><a href="{% url 'tareas' %}">Tus tareas</a></li>
       <li><a href="/logout/">Log Out</a></li>
     </ul>
 	<ul class="side-nav" id="mobile-demo">
@@ -39,6 +40,7 @@
       <li><a href="{% url 'horario'%}">Horario</a></li>
       <li><a href="{% url 'calc_notas' %}">Calculadora de Notas</a></li>
       <li><a href="/calProfesores/">Calificar Profesores</a></li>
+			<li><a href="{% url 'tareas' %}">Tus tareas</a></li>
       <li><a href="/logout/">Log Out</a></li>
 	</ul>
   </div>
@@ -54,6 +56,5 @@
     </div>
   </div>
 </footer>
-
 </body>
 </html>
