Error corregido horarios

--- a/AgendaSanPablo/templates/agregar_horario.html
+++ b/AgendaSanPablo/templates/agregar_horario.html
@@ -49,11 +49,11 @@
 		</div>
 		<div class="input-field col s12 m4 l4 offset-m2 offset-l2">
 			<label for="inp_horaInicio">Hora Inicio</label>
-			<input id="inp_horaInicio" name="inp_horaInicio" class="timepicker" type="time">
+			<input id="inp_horaInicio" name="inp_horaInicio" class="timepicker" type="time" required>
 		</div>
 		<div class="input-field col s12 m4 l4">
 			<label for="inp_horaFin">Hora Fin</label>
-			<input id="inp_horaFin" name="inp_horaFin" class="timepicker" type="time">
+			<input id="inp_horaFin" name="inp_horaFin" class="timepicker" type="time" required>
 		</div>
 		<div class="row">
 			<div class="col s12 m6 l6 offset-m3 offset-l3">
